--- a/otheatre/pom.xml
+++ b/otheatre/pom.xml
@@ -37,6 +37,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+                
+                <dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.11</version>
+		</dependency>
+                
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -47,6 +54,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+                
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
