--- a/otheatre/pom.xml
+++ b/otheatre/pom.xml
@@ -43,6 +43,7 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.11</version>
 		</dependency>
+
                 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -78,6 +79,10 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
