--- a/otheatre/src/main/resources/config/application-marius.properties
+++ b/otheatre/src/main/resources/config/application-marius.properties
@@ -2,4 +2,4 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/theatredb
 spring.datasource.username = admin
 spring.datasource.password = 12345
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
