--- a/otheatre/.gitignore
+++ b/otheatre/.gitignore
@@ -1,5 +1,6 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
+logs/
 
 ### STS ###
 .apt_generated
@@ -9,14 +10,14 @@ target/
 .settings
 .springBeans
 .sts4-cache
-*/logs/*
+
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
-*/logs/*
+
 
 ### NetBeans ###
 nbproject/private/
@@ -25,4 +26,3 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-*/logs/*
