--- a/otheatre/pom.xml
+++ b/otheatre/pom.xml
@@ -110,6 +110,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.google.appengine</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>LATEST</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
