--- a/otheatre/src/main/resources/config/application-marius.properties
+++ b/otheatre/src/main/resources/config/application-marius.properties
@@ -3,3 +3,8 @@ spring.datasource.url = jdbc:mysql://localhost:3306/theatredb
 spring.datasource.username = admin
 spring.datasource.password = 12345
 spring.jpa.hibernate.ddl-auto=validate
+
+# flyway
+flyway.url=jdbc:mysql://localhost:3306/theatredb?useUnicode=yes&characterEncoding=UTF-8
+flyway.user=admin
+flyway.password=12345
