--- a/otheatre/src/main/resources/config/application-prod.properties
+++ b/otheatre/src/main/resources/config/application-prod.properties
@@ -3,3 +3,10 @@ spring.datasource.url = jdbc:mysql://localhost:3306/theatredb_prod
 spring.datasource.username = admin
 spring.datasource.password = 12345
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+# flyway
+flyway.url=jdbc:mysql://localhost:3306/theatredb_prod?useUnicode=yes&characterEncoding=UTF-8
+flyway.user=admin
+flyway.password=12345
