--- a/otheatre/src/main/resources/config/application-prod.properties
+++ b/otheatre/src/main/resources/config/application-prod.properties
@@ -1,12 +1,19 @@
 # dev datasource
-spring.datasource.url = jdbc:mysql://localhost:3306/theatredb_prod
+
+spring.datasource.url = jdbc:mysql://localhost:3306/theatredb
 spring.datasource.username = admin
 spring.datasource.password = 12345
-spring.jpa.hibernate.ddl-auto=update
-
-
 
 # flyway
-flyway.url=jdbc:mysql://localhost:3306/theatredb_prod?useUnicode=yes&characterEncoding=UTF-8
+flyway.enabled=true
+flyway.baseline-on-migrate=true
+flyway.sql-migration-prefix=V
+flyway.sql-migration-suffix=.sql
+flyway.url=jdbc:mysql://localhost:3306/theatredb
 flyway.user=admin
 flyway.password=12345
+
+spring.jpa.hibernate.ddl-auto = none
+
+# ?useUnicode=yes&characterEncoding=UTF-8
+
