--- a/otheatre/src/main/resources/config/application-marius.properties
+++ b/otheatre/src/main/resources/config/application-marius.properties
@@ -13,7 +13,7 @@ flyway.url=jdbc:mysql://localhost:3306/theatredb
 flyway.user=admin
 flyway.password=12345
 
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = validate
 
 # ?useUnicode=yes&characterEncoding=UTF-8
 
