--- a/otheatre/src/main/resources/config/application.properties
+++ b/otheatre/src/main/resources/config/application.properties
@@ -1,1 +1,9 @@
 server.port=8080
+
+# flyway
+flyway.enabled=true
+flyway.baseline-on-migrate=true
+flyway.sql-migration-prefix=V
+flyway.sql-migration-suffix=.sql
+
+spring.jpa.hibernate.ddl-auto = validate
